@@ -1,7 +1,7 @@
 Welcome to IrrBP SDK.
 IrrBP is an Irrlicht - Bullet wrapper to simply use the bullet' physics with irrlicht graphics.
 
-> The wrapper is compiled against Irrlicht > 1.7.1 (also trunk versions) and Bullet 2.76. I'm not sure about backward compatibility
+> The wrapper is compiled against Irrlicht > 1.7.1 (also trunk versions) and Bullet 2.76-2.77. I'm not sure about backward compatibility
 > The whole library is compiled under VS 2005.
 > You can see the changelog in the "changes.txt" file
 > In the precompiled packages, the library are compiled under VS2005.
